--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="libname_leave_blank_if_wanna_use_default">LibName [leave blank if want to use default]</string>
     <string name="custom_end_address">Custom End Address</string>
     <string name="dump">DUMP</string>
+    <string name="fix_elf_dump">Auto Fix Dump</string>
 </resources>
